--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
-    <string name="app_name">Weibo</string>
+    <string name="app_name">Koala</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="add_account">添加</string>
+    <string name="oauth_dialog">网页授权</string>
+    <string name="oauth_title">授权</string>
     <string name="action_settings">Settings</string>
+    <string name="oauth_refresh">刷新</string>
+
 </resources>
