--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="oauth_title">授权</string>
     <string name="action_settings">Settings</string>
     <string name="oauth_refresh">刷新</string>
+    <string name="title_activity_main_time_line">MainTimeLineActivity</string>
 
 </resources>
